force-app/main/default/objects/BetterWorld_Transaction__c/BetterWorld_Transaction__c.object-meta.xml
<CustomObject>
    <label>BetterWorld Transaction</label>
    <nameField>
        <displayFormat>BW-{00000000}</displayFormat>
        <label>BetterWorld Staging Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BetterWorld Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>