force-app/main/default/objects/BetterWorld_Transaction__c/fields/BetterWorld_Id__c.field-meta.xml
<CustomField>
    <fullName>BetterWorld_Id__c</fullName>
    <externalId>true</externalId>
    <label>BetterWorld Transaction ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>