force-app/main/default/objects/BetterWorld_Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Donation Campaign</fullName>
            </value>
            <value>
                <fullName>Giveaway</fullName>
            </value>
            <value>
                <fullName>Ticketed Event</fullName>
            </value>
            <value>
                <fullName>item donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>