force-app/main/default/objects/BetterWorld_Transaction__c/fields/Fee_Offset__c.field-meta.xml
<CustomField>
    <fullName>Fee_Offset__c</fullName>
    <label>Fee Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>